--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-.DS_Store
-__pycache__/
-dist/
-air_drf_relation.egg-info/
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -10,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+dist/
 # Distribution / packaging
 .Python
 build/
@@ -130,6 +125,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+.DS_Store
+node_modules
+
 # local env files
 .env.local
 .env.*.local
@@ -147,3 +145,6 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+package-lock.json
+webpack-stats.json
