--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,7 +91,7 @@ jobs:
           python-version-file: "pyproject.toml"
 
       - name: Install packages
-        run: uv sync --frozen --no-dev
+        run: uv sync --no-dev
 
       - name: Build package
         run: uv build
