--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -67,18 +67,19 @@ jobs:
           body: ${{ steps.changelog.outputs.clean_changelog }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  build-and-push:
-    name: Build & Push Docker Image
+  build-and-publish:
+    name: Build & Publish
     runs-on: ubuntu-latest
     needs: release
     if: ${{ needs.release.outputs.skipped == 'false' }}
     permissions:
       contents: read
     steps:
-      - name: Checkout
+      - name: Checkout exact release tag
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ needs.release.outputs.tag }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
